fix issues with placeholder spacing in Firefox
this fixes an issue where the input placeholders in firefox for the
search bar and the filterable facet we're getting weirdly mis-located.

closes #226
pr #239

--- a/src/css/search-filter.scss
+++ b/src/css/search-filter.scss
@@ -24,6 +24,7 @@
 
     &::placeholder {
       color: $font-gray;
+      line-height: unset;
     }
   }
 
