--- a/src/css/search.scss
+++ b/src/css/search.scss
@@ -30,10 +30,14 @@
   input {
     border: 1px solid $border-light-color;
     height: 50px;
+
+    &::placeholder {
+      line-height: revert !important;
+    }
   }
 
   i.material-icons {
-    top: 25%;
+    top: 21%;
     left: 5px;
     color: $font-gray-light;
     cursor: pointer;
